Configure for Cloudflare Pages deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "agentprivacy-ai-landing",
   "version": "0.1.0",
   "description": "AgentPrivacy.ai Landing Page",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
@@ -26,4 +29,3 @@
     "typescript": "^5"
   }
 }
-
