--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev -p 5000",
     "build": "next build && echo Build completed successfully",
     "postbuild": "node -e \"const fs = require('fs'); const path = require('path'); console.log('Checking for out directory...'); console.log('Current working directory:', process.cwd()); console.log('Directory listing:', fs.readdirSync('.').join(', ')); if (!fs.existsSync('out')) { console.error('ERROR: out directory not found after build'); process.exit(1); } else { console.log('✓ out directory created successfully'); console.log('out directory contents:', fs.readdirSync('out').slice(0, 10).join(', ')); }\"",
-    "start": "serve out -p 8000",
+    "start": "serve out -p 8000 -c serve.json",
     "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^11.3.21",
-    "next": "^14.2.33",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^16.0.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
