Hackathon submission: Acts 1-12 inscribed, docs cleaned, security hardened
- Add complete inscription chronicles for Acts 1-12 with mainnet TXIDs
- Add sanitized ZYPHER_INSCRIPTION_FLOW_GUIDE with bilateral hash docs
- Add TAddressDisplay and UAddressDisplay components
- Update PROJECT_STATE_AND_REVIEW to reflect Acts 1-12 complete
- Clean up internal dev docs (removed 7 files)
- Harden .gitignore to exclude files with WIF keys and API credentials
- Update spellbook version to 4.2.0-canonical

(⚔️⊥🧙‍♂️)🙂 privacy, my blade, is value | decentralised AI, my spellbook, is the key.

--- a/.gitignore
+++ b/.gitignore
@@ -92,9 +92,18 @@ oracle-swordsman/verify-act.js
 # Inscription scripts with private keys
 oracle-swordsman/inscribe-act*.js
 oracle-swordsman/spend-act*.js
+oracle-swordsman/deshield-act*.js
+
+# WIF private key files
+*.wif
+wif.txt
+**/wif.txt
 # Files with hardcoded secrets - DO NOT TRACK
 oracle-swordsman/scripts/archive/
 oracle-swordsman/scripts/deployment/setup-with-keys.ts
 oracle-swordsman/scripts/key-generation/generate-addresses-proper.ts
 oracle-swordsman/scripts/key-generation/SPELLBOOK_ADDRESS_GUIDE.md
 oracle-swordsman/tests/integration/test-secretsigner.ts
+
+# Backup files
+*.bak
